# tidyg

./: .gitignore  README.md  pyproject.toml
tidyg/: __main__.py  functions.py  utils.py
