[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tidyg"
version = "0.1.0"
description = "TIDYG: A Python tool to tidy and unify ortholog group files from various sources into a consistent format."
authors = [
    {name = "tamasakian", email = "tamasakian@gmail.com"}
]
dependencies = []
readme = "README.md"